Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.9.4.8
----------------------------------------------------------------------
- Fixed: Fatal error in some of the payment gateways

2.9.4.7
----------------------------------------------------------------------
- Fixed: errors when checking out using PayPal and global cart is enabled
- Fixed: incorrect shipping calculations when using tax inclusive pricing and calculated shipping options
- Fixed: when toggling global cart on/off PayPal settings get wiped out
- Fixed: PHP warning when checking out using UPS shipping gateway

2.9.4.6
----------------------------------------------------------------------
- Fixed: Product and category specific coupons could be used for any product with a mal-formed coupon code http://wp.mu/9qe
- Fixed: Fatal "Cannot use string offset as an array" error in network admin when enabling global cart http://wp.mu/9qf

2.9.4.5
----------------------------------------------------------------------
- Fixed: display issue on product category templates http://wp.mu/9ek
- Fixed: when checking out every UPS shipping service shows as available instead of only the ones that are selected
- Fixed: order status links generate page-not-found errors http://wp.mu/9em
- Fixed: PHP notices when logging out
- Fixed: random slashes being added to Bitpay message field http://wp.mu/9f6

2.9.4.4
----------------------------------------------------------------------
- Fixed: [mp_related_products] some times causes product categories/tags to not display http://wp.mu/9ce
- Fixed: errors when checking out when using global cart 
- Fixed: shopping cart shows PHP warning
- Fixed: some arguments in [mp_list_global_products] don't work http://wp.mu/9dm