@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fixed: File download issue that some users were reporting
+- Fixed: Conflicts with Ultimatum theme http://wp.mu/9tt
+- Fixed: Global Product Widget is showing a description under each product even when "content to show" is set to none http://wp.mu/9u8 
+- Fixed: Shipping not being calculated correctly when using global cart and multiple shipping methods http://wp.mu/a0a
+
 2.9.4.8
 ----------------------------------------------------------------------
 - Fixed: Fatal error in some of the payment gateways
